# ccr4

./: CMakeLists.txt
lib/: CMakeLists.txt
lib/freemodbus/: CMakeLists.txt
scripts/: load_remotecore_firmware.sh
src/: CMakeLists.txt  main.cc
src/common/: common.h  utility_print.h
src/delay/: delay.cc  delay.h
src/echo/: echo.c  echo.h
src/freemodbus_tcp/: freemodbus_tcp.c  freemodbus_tcp.h
src/hw/: can.cc  maxon.cc  maxon.h  nmt.cc  nmt.h  robot.cc  robot.h
src/main_helper/: main_helper.cc
src/openamp/: echo.c  echo.h  echo_test.c  inter_core_com.h  openamp.c  openamp.h  openamp.hpp  rpmsg.h
src/robot/: robot.cc  robot.h
src/robot/controller/: controller.cc  controller.h
src/robot/r5_controllers/: r5_controllers.cc  r5_controllers.h
